k8s/base/resources.yaml
---
# Source: selenium-grid-kubernetes/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: selenium-workload-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: selenium
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          platform-access: 'true'
---
# Source: selenium-grid-kubernetes/charts/app/templates/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: selenium
  labels:
    app: selenium-hub

    app.kubernetes.io/component: selenium-grid-4.48.0-20260905
    app.kubernetes.io/instance: selenium
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/version: 4.48.0-20260905
    helm.sh/chart: app-0.59.1-techixora.1
spec:
  selector:
    app: selenium-hub
    app.kubernetes.io/instance: selenium
  type: ClusterIP
  ports:
    - name: http-hub
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: tcp-hub-pub
      protocol: TCP
      port: 4442
      targetPort: 4442
    - name: tcp-hub-sub
      protocol: TCP
      port: 4443
      targetPort: 4443
---
# Source: selenium-grid-kubernetes/charts/app/templates/chrome-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome
  namespace: selenium
  labels:
    app: selenium-node-chrome
    app.kubernetes.io/name: selenium-node-chrome

    app.kubernetes.io/component: selenium-grid-4.48.0-20260905
    app.kubernetes.io/instance: selenium
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/version: 4.48.0-20260905
    helm.sh/chart: app-0.59.1-techixora.1
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: selenium-node-chrome
      app.kubernetes.io/instance: selenium
  template:
    metadata:
      labels:
        app: selenium-node-chrome
        app.kubernetes.io/name: selenium-node-chrome

        app.kubernetes.io/component: selenium-grid-4.48.0-20260905
        app.kubernetes.io/instance: selenium
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/version: 4.48.0-20260905
        helm.sh/chart: app-0.59.1-techixora.1
      annotations:
        checksum/event-bus-configmap: 902d7f72799c63d42d95a5666c88cc3e74601e6d2c45eb4f03d965a7ac960f26
        checksum/node-configmap: 03e23076b148fb96908cd141ce35c28795fab421321a08168016c96a1fbea993
        checksum/logging-configmap: 9bcd22e967825fe4ee3b55769dc1d5f69c7587fd148e5a901a7252748847c0bb
        checksum/server-configmap: 74f82fc5aca098cca91ad88f615729289566d49a82fcc761c14e6efede2e156b
    spec:
      shareProcessNamespace: true
      serviceAccountName: selenium-serviceaccount
      serviceAccount: selenium-serviceaccount
      restartPolicy: Always
      containers:
        - name: selenium-node-chrome
          image: selenium/node-chrome:4.48.0-20260905
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: selenium-node-config
              mountPath: /opt/bin/nodeGridUrl.sh
              subPath: nodeGridUrl.sh
            - name: selenium-node-config
              mountPath: /opt/bin/nodePreStop.sh
              subPath: nodePreStop.sh
            - name: selenium-node-config
              mountPath: /opt/bin/nodeProbe.sh
              subPath: nodeProbe.sh
            - name: selenium-node-config
              mountPath: /opt/bin/nodeProbeReadiness.sh
              subPath: nodeProbeReadiness.sh
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command:
                - bash
                - -c
                - '/opt/bin/nodePreStop.sh '
          startupProbe:
            exec:
              command: ["bash", "-c", "/opt/bin/nodeProbe.sh Startup "]
            failureThreshold: 12
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 60
          readinessProbe:
            exec:
              command: ["bash", "-c", "/opt/bin/nodeProbeReadiness.sh Readiness "]
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command: ["bash", "-c", "/opt/bin/nodeProbe.sh Liveness "]
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 60
      terminationGracePeriodSeconds: 30
      volumes:
        - name: selenium-node-config
          configMap:
            name: selenium-node-config
            defaultMode: 493
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
# Source: selenium-grid-kubernetes/charts/app/templates/hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: selenium
  labels: &hub_labels
    app: selenium-hub
    app.kubernetes.io/name: selenium-hub

    app.kubernetes.io/component: selenium-grid-4.48.0-20260905
    app.kubernetes.io/instance: selenium
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/version: 4.48.0-20260905
    helm.sh/chart: app-0.59.1-techixora.1
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: selenium-hub
      app.kubernetes.io/instance: selenium
  template:
    metadata:
      labels: *hub_labels
      annotations:
        checksum/logging-configmap: 9bcd22e967825fe4ee3b55769dc1d5f69c7587fd148e5a901a7252748847c0bb
        checksum/server-configmap: 74f82fc5aca098cca91ad88f615729289566d49a82fcc761c14e6efede2e156b
        checksum/distributor-configmap: 0f019f78bdd8ca14df63c1f3b54cf6858a5d066a58e2fb8025dd148fe2b1597d
        checksum/router-configmap: ce2c313c3b7f10dfd4931a991f83b4957c0611f3b9bf92787adf6c82d67b8bce
        checksum/secrets: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/tls-cert-secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: selenium-serviceaccount
      serviceAccount: selenium-serviceaccount
      containers:
        - name: selenium-hub
          image: selenium/hub:4.48.0-20260905
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 4442
              protocol: TCP
            - containerPort: 4443
              protocol: TCP
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /readyz
              port: 4444
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /readyz
              port: 4444
            failureThreshold: 10
            initialDelaySeconds: 12
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /readyz
              port: 4444
            failureThreshold: 30
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 60
          volumeMounts:
            - name: selenium-distributor-config
              mountPath: /opt/bin/distributorProbe.sh
              subPath: distributorProbe.sh
            - name: "selenium-router-config"
              mountPath: /opt/bin/routerGraphQLUrl.sh
              subPath: routerGraphQLUrl.sh
            - name: "selenium-router-config"
              mountPath: /opt/bin/routerProbe.sh
              subPath: routerProbe.sh
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: "selenium-distributor-config"
          configMap:
            name: selenium-distributor-config
            defaultMode: 493
        - name: "selenium-router-config"
          configMap:
            name: selenium-router-config
            defaultMode: 493
